Fixes soft cropping effect on sale icon, not convinced by asset management :\

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -329,7 +329,7 @@ span.onsale {
 	text-align: center;
 	line-height: 32px;
 	top:0;
-	right: -15px;
+	left: -15px;
 	margin: -6px 0 0 0;
 	.border_radius(20px);
 }
